# i3wm-workspaces-manager

./: .gitignore  Makefile  README.md  TODO  TODO.md  flake.nix  pyproject.toml
i3wm_workspaces_manager/: __main__.py
i3wm_workspaces_manager/core/: app.py  workspace_manager.py
i3wm_workspaces_manager/gui/: base_window.py  workspace_creator_window.py  workspace_switcher_window.py
i3wm_workspaces_manager/utils/: focus_wrap.py
tests/: conftest.py  test_app.py  test_windows.py  test_workspace_manager.py
