[tool.poetry]
name = "i3wm-workspaces-manager"
version = "0.1.0"
description = "A GTK-based workspace manager for i3wm"
authors = ["pliski <pliski@pli.ski>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.0"
i3ipc = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"

[tool.poetry.scripts]
i3wm-workspaces-manager = "i3wm_workspaces_manager.__main__:main"
i3wm-focus-wrap = "i3wm_workspaces_manager.utils.focus_wrap:cli"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "i3required: marks tests that require i3 window manager to be running",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"